# OpenGL-projects

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/OpenGL_Cube/: CMakeLists.txt  main.c
src/OpenGL_libpq_Draw/: CMakeLists.txt  ColorFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  StandardShading.fragmentshader  StandardShading.vertexshader  StandardTransparentShading.fragmentshader  TransformVertexShader.vertexshader  cylinder.mtl  main.cpp  ogl.cpp  ogl.h  pq.cpp  pq.h
src/OpenGL_libpq_Draw/Mipmaps/: DL_Elev_JPG_DXT1_1.DDS  DL_Phy_1_1024x1024_DXT3.DDS  DL_Phy_1_128x128_DXT1.DDS  DL_Phy_1_128x128_DXT3.DDS  DL_Phy_1_256x256_DXT1.DDS  DL_Phy_1_256x256_DXT3.DDS  DL_Phy_1_512x512_DXT1.DDS  DL_Phy_1_512x512_DXT3.DDS  DL_Phy_1_64x64_DXT1.DDS  DL_Phy_1_64x64_DXT3.DDS  DL_Phy_2_JPG_DXT1_1.DDS  DL_Phy_JPG_DXT1_1.DDS  DL_Relief_JPG_DXT1_1.DDS  Thumbs.db  World_Satview_2048x2048_DXT1.DDS  uvmap_metering.DDS
src/OpenGL_libpq_Draw/Mipmaps/Templates/DL_Phy_1/: DL_Phy_1_1024x1024.tga  DL_Phy_1_128x128.tga  DL_Phy_1_256x256.tga  DL_Phy_1_512x512.tga  DL_Phy_1_64x64.tga
src/OpenGL_libpq_Draw/Mipmaps/Templates/World_Satview/: World_Satview_1024x1024.tga
src/common/: CMakeLists.txt  controls.cpp  objloader.cpp  quaternion_utils.cpp  shader.cpp  shader.hpp  shader_own.hpp  texture.cpp  vboindexer.cpp  vboindexer.hpp
